<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/goBackToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/login_fragment_title_back_button"
            android:onClick="onBackPressed"
            android:src="@drawable/chevron_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goBackToolbar"
            android:scaleType="fitCenter"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:text="@string/login_fragment_title_name"
            android:textColor="@color/white"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="@+id/goBackToolbar"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@+id/goBackToolbar"
            style="@style/KanitRegularLarge" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/login_fragment_input_email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackToolbar"
        style="@style/KanitLightSmall"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_input_height"
            android:layout_marginHorizontal="@dimen/fragment_login_textinput_margin_horizontal"
            android:backgroundTint="@color/dark_grey"
            android:hint="@string/login_fragment_input_email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/grey"
            style="@style/KanitLightSmall"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/login_fragment_input_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        style="@style/KanitLightSmall"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_input_height"
            android:layout_marginHorizontal="@dimen/fragment_login_textinput_margin_horizontal"
            android:backgroundTint="@color/dark_grey"
            android:hint="@string/login_fragment_input_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/grey"

            style="@style/KanitLightSmall"/>
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/loginButton"
        style="@style/KanitRegularMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_login_button_height"
        android:layout_marginHorizontal="@dimen/fragment_login_button_margin_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style_2"
        android:text="@string/login_fragment_button_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/customGoogleSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/customGoogleSignInButton"
        style="@style/KanitRegularMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_login_button_height"
        android:layout_marginHorizontal="@dimen/fragment_login_button_margin_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style_2"
        app:backgroundTint="@color/white"
        android:text="@string/login_fragment_button_google_login"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_fragment_text_forgot_password"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/KanitLightMedium"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

