<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/goBackToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/register_fragment_title_back_button"
            android:onClick="onBackPressed"
            android:src="@drawable/chevron_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goBackToolbar" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:text="@string/register_fragment_title_name"
            android:textColor="@color/white"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="@+id/goBackToolbar"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@+id/goBackToolbar"
            style="@style/KanitRegularLarge" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/login_fragment_input_email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackToolbar"
        style="@style/KanitLightSmall"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_input_height"
            android:layout_marginHorizontal="@dimen/fragment_register_textinput_margin_horizontal"
            android:backgroundTint="@color/dark_grey"
            android:hint="@string/login_fragment_input_email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/grey"
            style="@style/KanitLightSmall"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textViewPassword"
        style="@style/KanitLightSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/register_fragment_input_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            style="@style/KanitLightSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_input_height"
            android:layout_marginHorizontal="@dimen/fragment_register_textinput_margin_horizontal"
            android:backgroundTint="@color/dark_grey"
            android:hint="@string/register_fragment_input_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textViewRepeatPassword"
        style="@style/KanitLightSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/register_fragment_input_repeat_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepeatPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextRepeatPassword"
            style="@style/KanitLightSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_input_height"
            android:layout_marginHorizontal="@dimen/fragment_register_textinput_margin_horizontal"
            android:backgroundTint="@color/dark_grey"
            android:hint="@string/register_fragment_input_repeat_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/register_fragment_input_username"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRepeatPassword"
        style="@style/KanitLightSmall" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_login_input_height"
            android:layout_marginHorizontal="@dimen/fragment_register_textinput_margin_horizontal"
            android:backgroundTint="@color/dark_grey"

            android:hint="@string/register_fragment_input_username"
            android:inputType="textPersonName"
            style="@style/KanitLightSmall"


            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/grey"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/progressBarStyleLarge" />
    <Button
        android:id="@+id/registerButton"
        style="@style/KanitRegularMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_start_button_height"
        android:layout_marginHorizontal="@dimen/fragment_start_button_margin_horizontal"
        android:layout_marginBottom="@dimen/fragment_start_button_margin_bottom"
        android:background="@drawable/background_style_mildblue_rectangle"
        android:text="@string/register_fragment_button_register"
        android:textAllCaps="false"
        app:backgroundTint="@color/mild_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

